--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>HINT Fashion</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +39,84 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- FOOTER -->
+    <br/>
+    <br/>
+    <div align="center">
+    <div style="border-style: outset; width: 71%; background-color: #DEF2F1;">
+    <footer id="footer" class="section" >
+      <!-- container -->
+      <div class="container">
+        <!-- row -->
+        <div class="row">
+          <!-- footer contact -->
+          <div class="col-md-4">
+            <div class="footer">
+              <div class="footer-logo">
+                <a class="logo" href="#"><img src="./img/logo.png" alt=""></a>
+              </div>
+              <p>Hint Fashion Store is One of the Leading Online Fashion Stores in Sri lanka That Provide Their Customers With Quality Dresses and Clothing Ware.</p>
+              <ul class="footer-contact">
+                <li><i class="fa fa-map-marker"></i> Hint Fashion Store, Colombo, Sri Lanka</li>
+                <li><i class="fa fa-phone"></i> +94 912 222 199</li>
+                <li><i class="fa fa-envelope"></i> <a href="#">hintfashion@gmail.com</a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- /footer contact -->
+
+          <!-- footer galery -->
+          <div class="col-md-4">
+            <div class="footer">
+              <br/>
+              <br/>
+              <br/>
+
+              <h3 class="footer-title">-Hint Fashion-</h3>
+              <h3 class="footer-title">Fashion For Beauty</h3>
+
+
+            </div>
+          </div>
+          <!-- /footer galery -->
+
+          <!-- footer newsletter -->
+          <div class="col-md-4">
+            <div class="footer">
+              <h3 class="footer-title">Location</h3>
+
+              <iframe src="https://www.google.com/maps/d/u/0/embed?mid=10ETw_UXPe09Y2nsNfSZnHJRrs_b7VREM" width="100%" height="100%"></iframe>
+
+            </div>
+          </div>
+          <!-- /footer newsletter -->
+        </div>
+        <!-- /row -->
+
+
+
+
+          </div>
+        </div>
+        <!-- /footer copyright & nav -->
+      </div>
+      <!-- /container -->
+    </footer>
+    <!-- /FOOTER -->
+
+    <!-- jQuery Plugins -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/main.js"></script>
+    </div>
+    </div>
+  <br/>
+
+
+  </body>
+</html>
+
   </body>
 </html>
