--- a/client/public/index.html
+++ b/client/public/index.html
@@ -42,8 +42,8 @@
     <!-- FOOTER -->
     <br/>
     <br/>
-    <div align="center">
-    <div style="border-style: outset; width: 99%; background-color: #DEF2F1;">
+    <div align="center" >
+    <div style=" width: 100%; background-color: #282c34; color: ivory">
     <footer id="footer" class="section" >
       <!-- container -->
       <div class="container">
@@ -112,7 +112,7 @@
     <script src="js/main.js"></script>
     </div>
     </div>
-  <br/>
+  
 
 
   </body>
