--- a/client/public/index.html
+++ b/client/public/index.html
@@ -59,7 +59,7 @@
               <ul class="footer-contact">
                 <li><i class="fa fa-map-marker"></i> Hint Fashion Store, Colombo, Sri Lanka</li>
                 <li><i class="fa fa-phone"></i> +94 912 222 199</li>
-                <li><i class="fa fa-envelope"></i> <a href="#">hintfashion@gmail.com</a></li>
+                <li><i class="fa fa-envelope"></i> hintfashion@gmail.com</li>
               </ul>
             </div>
           </div>
@@ -83,6 +83,7 @@
           <!-- footer newsletter -->
           <div class="col-md-4">
             <div class="footer">
+              <br/>
               <h3 class="footer-title">Location</h3>
 
               <iframe src="https://www.google.com/maps/d/u/0/embed?mid=10ETw_UXPe09Y2nsNfSZnHJRrs_b7VREM" width="100%" height="100%"></iframe>
@@ -112,7 +113,7 @@
     <script src="js/main.js"></script>
     </div>
     </div>
-  
+
 
 
   </body>
